Add docker-compose for todo-app, and only db
